# shzgptr-api

./: Cargo.toml
agent/: Cargo.toml
agent/src/: claude.rs  lib.rs  openai.rs
server/: Cargo.toml
server/src/: handlers.rs  main.rs  routes.rs  state.rs
