[package]
name = "agent"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.15", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3.31"
reqwest-eventsource = { git = "https://github.com/xero7689/reqwest-eventsource.git", branch = "feature/eventsource-post-requests" }
